2002-09-16  Radek Doulik  <rodo@ximian.com>

	* popup.c (prepare_properties_and_menu): check if selection
	contains link before including remove link
	(prepare_properties_and_menu): always include "Insert link" menu
	item

2002-09-10  Larry Ewing  <lewing@ximian.com>

	* test-html-editor-control.c (view_html_source_html_cb): add
	another menu entry for viewing the output as html instead of plain
	text.

	* htmlsourveview.h: add a prototype for set_mode.

	* htmlsourceview.c (html_source_view_set_mode): add a way to
	toggle the display mode between displaying the input as html or
	displaying the input as plain text.

2002-08-26  Ettore Perazzoli  <ettore@ximian.com>

	* Makefile.am (CLEANFILES): Use "=" instead of "+=" so it works
	with newer Automakes.

2002-08-22  Radek Doulik  <rodo@ximian.com>

	* menubar.c (file_dialog_ok): convert from locale to utf8

2002-08-21  Radek Doulik  <rodo@ximian.com>

	* menubar.c (indent_more_cb): removed properties menu item as it
	doesn't play nice with evo. now clients have to call capplet or
	provide own settings if needed

2002-07-10  Larry Ewing  <lewing@ximian.com>

	* toolbar.c (editor_toolbar_indent_cb): pass the correct widget to
	push.
	(editor_toolbar_unindent_cb): see above.

2002-07-08  Larry Ewing  <lewing@ximian.com>

	* toolbar.c (editor_toolbar_indent_cb): use push level.
	(editor_toolbar_unindent_cb): use pop level.

2002-06-24  Larry Ewing  <lewing@ximian.com>

	* menubar.c (paste_quotation_cb): add paste_quotation verb.

	* GNOME_GtkHTML_Editor.xml.in: add paste quotation command and
	menuitem.

2002-06-14  Radek Doulik  <rodo@ximian.com>

	* spell.c (spell_create_language_menu): check for exception as
	well

2002-06-12  Larry Ewing  <lewing@ximian.com>

	* menubar.c (indent_less_cb): use the new
	gtk_html_indent_level_pop function.
	(indent_more_cb): use gtk_html_indent_level_push.

2002-06-06  Radek Doulik  <rodo@ximian.com>

	* menubar.c: added insert text/html file items and implemented
	them
