@@ -60,19 +60,25 @@
 static void
 copy (GtkWidget *mi, GtkHTMLControlData *cd)
 {
-	html_engine_copy (cd->html->engine);
+	gtk_html_copy (cd->html->engine);
 }
 
 static void
 cut (GtkWidget *mi, GtkHTMLControlData *cd)
 {
-	html_engine_cut (cd->html->engine);
+	gtk_html_cut (cd->html->engine);
 }
 
 static void
 paste (GtkWidget *mi, GtkHTMLControlData *cd)
 {
-	html_engine_paste (cd->html->engine);
+	gtk_html_paste (cd->html, FALSE);
+}
+
+static void
+paste_cite (GtkWidget *mi, GtkHTMLControlData *cd)
+{
+	gtk_html_paste (cd->html, TRUE);
 }
 
 static void
@@ -337,6 +343,11 @@ insert_html (GtkWidget *mi, GtkHTMLControlData *cd)
 		menuitem = gtk_menu_item_new_with_label (l); \
                 ADD_ITEM_BASE (f,t)
 
+#define ADD_ITEM_SENSITIVE(l,f,t,s) \
+		menuitem = gtk_menu_item_new_with_label (l); \
+                ADD_ITEM_BASE (f,t); \
+                gtk_widget_set_sensitive (menuitem, s);
+
 #define ADD_ITEM_UTF8(l,f,t) \
                 menuitem = e_utf8_gtk_menu_item_new_with_label (GTK_MENU (menu), l); \
                 ADD_ITEM_BASE (f,t)
@@ -375,6 +386,7 @@ prepare_properties_and_menu (GtkHTMLControlData *cd, guint *items)
 	GtkWidget *submenu, *menuparent;
 	GtkWidget *menuitem;
 	guint items_sep = 0;
+	gboolean active = FALSE;
 
 	obj  = cd->html->engine->cursor->object;
 	menu = gtk_menu_new ();
@@ -390,8 +402,9 @@ prepare_properties_and_menu (GtkHTMLControlData *cd, guint *items)
 	ADD_ITEM ("Insert HTML", insert_html, NONE);
 	ADD_SEP;
 #endif
+	active = html_engine_is_selection_active (e);
 
-	if (!html_engine_is_selection_active (e) && obj && html_object_is_text (obj)
+	if (!active && obj && html_object_is_text (obj)
 	    && !html_engine_spell_word_is_valid (e)) {
 		gchar *spell, *word, *check_utf8, *add_utf8, *ignore_utf8, *ignore, *add;
 
@@ -425,7 +438,7 @@ prepare_properties_and_menu (GtkHTMLControlData *cd, guint *items)
 	ADD_ITEM (_("Insert link"), insert_link, NONE);
 
 	if (cd->format_html
-	    && ((html_engine_is_selection_active (e) && html_engine_selection_contains_link (e))
+	    && ((active && html_engine_selection_contains_link (e))
 		|| (obj
 		    && (HTML_OBJECT_TYPE (obj) == HTML_TYPE_LINKTEXT
 			|| (HTML_OBJECT_TYPE (obj) == HTML_TYPE_IMAGE
@@ -434,17 +447,11 @@ prepare_properties_and_menu (GtkHTMLControlData *cd, guint *items)
 		ADD_ITEM (_("Remove link"), remove_link, NONE);
 	}
 
-	if (html_engine_is_selection_active (e)) {
-		ADD_SEP;
-		ADD_ITEM (_("Copy"), copy, NONE);
-		ADD_ITEM (_("Cut"),  cut, NONE);
-	}
-	if (e->clipboard) {
-		if (!html_engine_is_selection_active (e)) {
-			ADD_SEP;
-		}
-		ADD_ITEM (_("Paste"),  paste, NONE);
-	}
+	ADD_SEP;
+	ADD_ITEM_SENSITIVE (_("Copy"), copy, NONE, active);
+	ADD_ITEM_SENSITIVE (_("Cut"),  cut, NONE, active);
+	ADD_ITEM (_("Paste"),  paste, NONE);
+	ADD_ITEM (_("Paste Quotation"),  paste_cite, NONE);
 
 	if (cd->format_html && obj) {
 		switch (HTML_OBJECT_TYPE (obj)) {
